<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">


    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="cursive"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:paddingTop="@dimen/pad_vertical_long"
        android:paddingBottom="@dimen/pad_vertical_long"
        android:text="@string/form_confirmar" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:paddingTop="@dimen/pad_vertical_long"
        android:paddingBottom="@dimen/pad_vertical_long"

        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/pad_vertical_short"
        >

        <TextView
            android:id="@+id/lblFecha"
            android:layout_width="@dimen/col_1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/lbl_fecha" />


       <TextView
           android:id="@+id/tvFecha"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/colorPrimaryText"
           android:textStyle="bold"

           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/pad_vertical_short"
        >

       <TextView
           android:id="@+id/lblTfno"
           android:layout_width="@dimen/col_1"
           android:layout_height="wrap_content"
           android:textColor="@color/colorPrimaryLight"
           android:text="@string/lbl_tfno"
       />

       <TextView
           android:id="@+id/tvTfno"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/colorPrimaryText"
           android:textStyle="bold"

           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/pad_vertical_short"
        >

       <TextView
           android:id="@+id/lblMail"
           android:layout_width="@dimen/col_1"
           android:layout_height="wrap_content"
           android:textColor="@color/colorPrimaryLight"
           android:text="@string/lbl_correo"
       />

       <TextView
          android:id="@+id/tvMail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
           android:textColor="@color/colorPrimaryText"
           android:textStyle="bold"

           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/pad_vertical_short"
        >

        <TextView
            android:id="@+id/lblDesc"
            android:layout_width="@dimen/col_1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryLight"
            android:text="@string/lbl_desc"
            />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity= "bottom"
        >

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorText"
        android:text = "@string/btn_edit"
        android:onClick="btnEdit_onClick"
        />

    </LinearLayout>
</LinearLayout>