<?xml version="1.0" encoding="utf-8"?>
<!--
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
-->

<!--
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layLinear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtNombreLayout"
            android:padding="1sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize = "@dimen/font_size"
                android:hint="@string/lbl_nombre" />

        </android.support.design.widget.TextInputLayout>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:spinnersShown="true"
            android:datePickerMode="spinner"
            android:padding="1sp"
             />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtTfnoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtTfno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "@dimen/font_size"
                android:singleLine="true"
                android:hint="@string/lbl_tfno" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtMailLayout"
            android:padding="1sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/txtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "@dimen/font_size"
                android:singleLine="true"
                android:hint="@string/lbl_correo" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtDescLayout"
            android:padding="1sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize = "@dimen/font_size"
                android:hint="@string/lbl_desc" />
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity= "bottom"
        >

            <Button
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="0dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorText"
                android:onClick="btnOK_onClick"
                android:text="@string/btn_next"
                android:textAlignment="center"
/>

        </LinearLayout>

    </LinearLayout>
<!--
</ScrollView>
-->